test/libsolidity/syntaxTests/constructor/constructor_virtual.sol
contract C {
    constructor() virtual {}
}
// ----
// TypeError: (17-48): Constructors cannot be virtual.
